# stm32-srx882s

./: .gitignore  Makefile  README.md  stm32f103c8.txt
.github/instructions/: 10xengineer.instructions.md
docs/: NOTES.md  schematic.md
firmware/: CMakeLists.txt  Dockerfile.pio  README.md  README_pio.md  pio_build.sh  platformio.ini  test_bit_extraction.c  test_ev1527.c
firmware/src/: hw_capture.c  hw_capture.h  main.c  protocol_classifier.c  protocol_classifier.h  protocol_decoder.c  protocol_decoder.h  pulse_utils.c  pulse_utils.h  uart_out.c  uart_out.h
inc/: board.h  stm32f1xx_hal_conf.h
ld/: stm32f103c8t6.ld
scripts/: log_serial.py  plot_pulses.py
src/: classifier.c  classifier.h  gpio.c  gpio.h  main.c  rf_capture.c  rf_capture.h  ringbuf.c  ringbuf.h  system_clock.c  uart.c  uart.h
src/decoders/: pt2262.c
tests/: test_runner.py
tools/: README.md  uart_log_parser.py
